--- a/style/style.css
+++ b/style/style.css
@@ -343,6 +343,32 @@
         text-decoration: underline;
     }
 
+    .recent-button-page {
+        width: 100%;
+        height: 40px;
+    }
+
+    .recent-button-page .recent-button {
+        display: flex;
+        justify-content: center;
+        vertical-align: middle;
+        align-items: center;
+        background-color: white;
+        border: 1px solid #303030;
+        border-radius: 3px;
+        text-decoration: none;
+        color: #121212;
+        font-size: 15px;
+        font-weight: bold;
+        width: 100%;
+        height: 100%;
+    }
+
+    .recent-button:hover {
+        background-color:#121212;
+        color: #E5E4E4;
+        cursor: pointer;
+    }
 
 /* main style  */
 
@@ -373,7 +399,7 @@
         display: inline-block;
         width: 100%;
         height: 100%;
-        margin-bottom: 50px;
+        margin-bottom: 80px;
     }
 
     .footer-top .footer-menu {
