--- a/style/style.css
+++ b/style/style.css
@@ -346,6 +346,7 @@
     .recent-button-page {
         width: 100%;
         height: 40px;
+        margin-bottom: 25px;
     }
 
     .recent-button-page .recent-button {
