--- a/style/style.css
+++ b/style/style.css
@@ -284,8 +284,9 @@
     }
 
     .post-inside .category-post-inside {
+        display: inline-block;
         margin: 10px 0 7px 0;
-        font-size: 12px;
+        font-size: 10px;
         font-weight: 500;
         text-transform: uppercase;
         text-decoration: none;
@@ -298,8 +299,20 @@
     }
 
     .post-inside .category-post-inside a:hover {
-        text-decoration: underline;
-        color: #121212;
+        text-decoration: none;
+        color: #666666;
+    }
+
+    .category-post-inside .a, .gap-icon-cat {
+        display: inline-block;
+    }
+
+    .category-post-inside .gap-icon-cat {
+        width: 0.5px;
+        height: 8px;
+        margin: 0 5px 0 5px;
+        background-color: #666666;
+        box-sizing: border-box;
     }
 
     .post-inside .title-post-inside h3 {
@@ -327,20 +340,33 @@
     }
 
     .author-post-inside {
-        display: block;
-        margin: 7px 0 0px 0;
-        font-size: 11px;
+        display: inline-block;
+        margin: 10px 0 0px 0;
+        font-size: 10px;
         color: #666666
     }
 
-    .author-post-inside a {
+    .author-post-inside .author-post, .gap-icon, .time-post {
+        display: inline-block;
+    }
+
+    .author-post-inside .gap-icon {
+        width: 2px;
+        height: 2px;
+        border-radius: 50%;
+        background-color: #666666;
+        margin: 0 5px 2px 5px;
+        box-sizing: border-box;
+    }
+
+    .author-post-inside .author-post a {
         text-decoration: none;
         color: #666666;
     }
 
-    .author-post-inside a:hover {
+    .author-post-inside .author-post a:hover {
         color: #0F6ABE;
-        text-decoration: underline;
+        text-decoration: none;
     }
 
     .recent-button-page {
@@ -610,6 +636,10 @@
     .post-inside .title-post-inside h3 {
         font-size: 18px !important;
         line-height: 1.3;
+    }
+
+    .author-post-inside {
+        font-size: 9px !important;
     }
 
     /* main style  */
