--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,8 @@
     }
 
     .header-container {
+        display: flex;
+        align-items: center;
         width: 100%;
         margin-left: auto;
         margin-right: auto;
@@ -96,10 +98,76 @@
     }
 
     .header-in .main-menu {
+        float: left;
+        display: flex;
         align-items: center;
+        width: 20px;
+        height: auto;
+    }
+
+    .main-menu img {
+        z-index: 6;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        padding: 7px 7px 7px 7px;
+    }
+
+    .main-menu img:hover {
+        cursor: pointer;
+        background-color:#E5E4E4;
+    }
+
+    .header-in .brand-logo {
+        z-index: 7;
+        position: relative;
+        float: left;
+        margin-left: 30px;
+        margin-top: 4px;
+        display: flex;
+        flex-wrap: wrap;
+        width: 130px;
+        height: auto;
+        align-items: center;
+    }
+
+    .brand-logo a img {
+        position: relative;
         width: 100%;
         height: 100%;
     }
+
+    .brand-logo a:hover {
+        cursor: pointer;
+        text-decoration: none;
+    }
+
+    .brand-logo a img:hover {
+        cursor: pointer;
+    }
+
+    .header-in .costum-main-menu {
+        position: absolute;
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .costum-main-menu nav a {
+        padding: 0 10px 0 10px;
+        text-decoration: none;
+        font-size: 12px;
+        color: #262626;
+    }
+
+    .costum-main-menu nav a:hover {
+        text-decoration: none;
+        cursor: pointer;
+        color: #666666;
+    }
+
 
     .header .header-bottom {
         z-index: 6;
@@ -479,7 +547,17 @@
     }
 
     .footer-bottom .footer-logo {
+        width: 100px;
+        padding-top: 4px;
         float: left;
+    }
+
+    .footer-logo img {
+        display: inline-block;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 100%;
     }
 
     .footer-bottom .footer-watermark {
@@ -504,6 +582,22 @@
 
 @media screen and (max-width: 960px) {
     /* tablet, landscape iPad, lo-res laptops ands desktops */ 
+
+    /* header style  */
+
+    .header-in .costum-main-menu {
+        display: none;
+    }
+
+    .header-in .brand-logo {
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+        justify-items: center;
+        justify-content: center;
+    }
+
+    /* header style  */
 
     /* main style  */
     main .main-container {
