--- a/style/style.css
+++ b/style/style.css
@@ -170,6 +170,23 @@
         color: #666666;
     }
 
+    .header-in .main-search {
+        float: right;
+        display: flex;
+        width: 20px;
+        height: auto;
+        align-items: center;
+    }
+
+    .main-search img {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .main-search img:hover {
+        cursor: pointer;
+    }
 
     .header .header-bottom {
         z-index: 6;
@@ -389,7 +406,7 @@
         font-size: 21px;
         font-weight: bold;
         line-height: 1.3;
-        padding-right: 7px;
+        padding-right: 20px;
         letter-spacing: -0.1px;
         color: #121212 !important;
     }
@@ -769,7 +786,7 @@
     }
 
     .post-inside .title-post-inside h3 {
-        font-size: 17px !important;
+        font-size: 16px !important;
         line-height: 1.2;
     }
 
