--- a/style/style.css
+++ b/style/style.css
@@ -751,6 +751,7 @@
     }
 
     .post-inside .title-post-inside h3 {
+        padding-right: 10px !important;
         font-size: 18px !important;
         line-height: 1.3;
     }
@@ -786,7 +787,7 @@
     }
 
     .post-inside .title-post-inside h3 {
-        font-size: 16px !important;
+        font-size: 15px !important;
         line-height: 1.2;
     }
 
