--- a/style/style.css
+++ b/style/style.css
@@ -160,7 +160,7 @@
     .costum-main-menu nav a {
         padding: 0 10px 0 10px;
         text-decoration: none;
-        font-size: 11px;
+        font-size: 13px;
         color: #262626;
     }
 
@@ -258,7 +258,7 @@
     .recent-posts .main-advertisement {
         width: 100%;
         height: 200px;
-        background-color: #44AACA;
+        background-color:#E5E4E4;
         margin-bottom: 30px;
         box-sizing: border-box;
         border-radius: 2px;
