--- a/style/style.css
+++ b/style/style.css
@@ -843,8 +843,8 @@
 
     .main-post figure > figcaption {
         font-size: 11px;
-        font-weight: 300;
-        letter-spacing: 0.4px;
+        font-weight: 400;
+        letter-spacing: 0.3px;
         line-height: 18px;
         padding-right: 30px;
         color: #585858;
@@ -1188,9 +1188,9 @@
 
     /* main header  */
 
-    .header-bottom .header-container {
+    /* .header-bottom .header-container {
         margin-top: -5px;
-    }
+    } */
 
     .header-bottom a {
         font-size: 11px;
@@ -1292,9 +1292,8 @@
 
     /* post  */
     .header-post-category a {
-        font-size: 14px;
+        font-size: 11px;
     }
-
 
     .header-post-title h1 {
         font-size: 36px;
@@ -1306,7 +1305,13 @@
     }
 
     .header-post-desc span {
-        font-size: 13px;
+        font-size: 12px !important;
+        letter-spacing: 0.2px !important;
+        line-height: 1.5 !important;
+    }
+
+    .header-post-info {
+        font-size: 12px !important;
     }
 
     .main-post h2, h3, h4, h5 {
@@ -1343,6 +1348,7 @@
     }
 
     .main-post figure > figcaption {
+        font-size: 10px !important;
         line-height: 1.5 !important;
     }
 
