--- a/style/style.css
+++ b/style/style.css
@@ -60,13 +60,55 @@
         padding: 0 !important;
         position: relative;
         font-family: 'Roboto', sans-serif;
-        font-size: 18px;
+        font-size: 16px;
         width: 100%;
         height: 100%;
         line-height: 1.46;
     }
 
 /* default style - inherit */
+
+
+/* defaut from me  */
+
+    a {
+        text-decoration: none;
+        color: #0F6ABE;
+    }
+
+    a:hover {
+        cursor: pointer;
+    }
+
+    p {
+        font-size: 16px;
+        color: #1a1a1a;
+    }
+
+    b, strong {
+        font-weight: bold;
+        color: #1a1a1a;
+    }
+
+    em, i {
+        font-style: italic;
+        color: #1a1a1a;
+    }
+
+    ol, ul {
+        color: #1a1a1a;
+    }
+
+    span {
+        font-size: 16px;
+    }
+
+    cite {
+        font-size: 16px;
+    }
+
+
+/* defaut from me  */
 
 
 /* scrollbar  */
@@ -346,6 +388,7 @@
         position: absolute;
         width: 15%;
         height: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         background-color: #0440c4;
     }
 
@@ -676,11 +719,11 @@
     }
 
     .header-post-title h1 {
-        font-size: 45px;
+        font-size: 43px;
         font-weight: 900;
-        color: #111111;
-        line-height: 1.4;
-        padding-right: 90px;
+        color: #131313;
+        line-height: 1.3;
+        padding-right: 70px;
     }
 
     .header-post-desc {
@@ -722,13 +765,16 @@
     }
 
     .post-date {
+        font-size: 14px;
         margin-left: 20px;
         display: inline-block;
     }
     
-    .post-author span {
+    .post-author span, .post-date span {
+        font-size: 14px;
         display: inline-block;
     }
+
     .post-author span a {
         text-decoration: none;
         color: #0F6ABE;
@@ -752,7 +798,7 @@
         margin-bottom: 15px;
         font-size: 16px;
         font-weight: 400;
-        color: #262626;
+        color: #1a1a1a;
         padding-right: 10px;
     }
 
@@ -796,7 +842,7 @@
     .main-post h2, .main-post h3, .main-post h4, .main-post h5 {
         font-weight: bold;
         padding-right: 25px;
-        color: #262626;
+        color: #141414;
     }
 
     .main-post h2 {
@@ -851,19 +897,19 @@
     }
 
     .main-post ol {
-        margin: 18px 0 18px 0;
+        margin: 10px 0 10px 0;
         padding-left: 40px;
         padding-right: 20px;
         list-style-type: decimal;
-        color: #262626;
+        color: #1a1a1a;
     }
 
     .main-post ul {
-        margin: 18px 0 18px 0;
+        margin: 10px 0 10px 0;
         padding-left: 40px;
         padding-right: 20px;
         list-style-type: disc;
-        color: #262626;
+        color: #1a1a1a;
     }
 
     .main-post ol li {
@@ -876,6 +922,18 @@
         text-align: left;
         line-height: 34px;
     }
+
+    /* yoast  */
+
+    .schema-faq strong.schema-faq-question {
+        font-size: 16px;
+    }
+
+    .schema-faq p.schema-faq-answer {
+        font-size: 16px;
+    }
+
+    /* yoast  */
 
 
     .main-post .tags {
@@ -932,7 +990,8 @@
         width: 100%;
         float: left;
         font-size: 12px;
-        letter-spacing: 0.1px !important;
+        font-family: 'Roboto', sans-serif;
+        letter-spacing: 0.2px !important;
         line-height: 1.5;
         padding: 10px 10px 10px 10px;
         border-radius: 3px;
@@ -973,11 +1032,89 @@
     .comment-form p.comment-notif {
         font-size: 13px;
         font-weight: 500;
+        padding-bottom: 18px;
         margin: 5px 0 10px 0;
         color: #4F4F4F;
+        border-bottom: 0.5px solid #C7C5C5;
     }
 
+    .list-comments {
+        width: 100%;
+        height: 100%;
+        padding: 10px 0 15px 0;
+        border-bottom: 0.5px solid #C7C5C5;
+    }
 
+    .list-comments ol, .list-comments ol.all-comments {
+        list-style: none;
+    }
+
+    .list-comments ol li, li.comment {
+        width: 100%;
+        height: auto;
+    }
+
+    .list-comments ul.children {
+        width: auto;
+        height: auto;
+        margin-left: 56px;
+    }
+
+    .comment-body {
+        padding: 7px 0 7px 0;
+    }
+
+    .comment-author {
+        width: auto;
+        height: auto;
+    }
+
+    .comment-author img, .comment-author .avatar {
+        width: 45px;
+        height: auto;
+        border-radius: 50px;
+        float: left;
+        margin-right: 10px;
+        background-color: #E5E4E4;
+        box-sizing: border-box;
+    }
+
+    .comment-author .fn {
+        font-weight: 600;
+        text-transform: uppercase;
+        font-size: 13px;
+        color: #121212;
+    }
+
+    .comment-author .says {
+        display: none;
+    }
+
+    .comment-meta {
+        font-size: 10px;
+        color: #BABABA;
+    }
+
+    .comment-meta a {
+        color: #BABABA !important;
+    }
+
+    .comment-body p {
+        font-size: 12px;
+        line-height: 1.7;
+        margin-top: 10px;
+        padding: 2px 7px 10px 56px;
+    }
+
+    .reply {
+        font-size: 12px;
+        margin: 10px 0 10px 56px;
+    }
+
+    .reply a {
+        font-size: 12px;
+        color: #C3C3C3;
+    }
 
 
     /* comments  */
@@ -1375,6 +1512,7 @@
     /* post  */
     .header-post-category a {
         font-size: 11px;
+        text-transform: uppercase;
     }
 
     .header-post-title h1 {
@@ -1431,8 +1569,9 @@
     }
 
     .main-post figure > figcaption {
+        padding-right: 10px;
         font-size: 10px !important;
-        line-height: 1.5 !important;
+        line-height: 1.4 !important;
     }
 
     .main-post ul li, .main-post ol li {
@@ -1535,6 +1674,9 @@
 
     .form-comment {
         width: 100%;
+    }
+    .form-comment textarea.comment {
+        font-size: 11px;
     }
 
     .form-comment input.author, .form-comment input.email {
