--- a/style/style.css
+++ b/style/style.css
@@ -824,7 +824,7 @@
         min-height: 150px;
         height: auto;
         margin: 0 7px 0 7px;
-        background-image: url("/Code/style/img/share-svgrepo-com.svg");
+        background-image: url("img/share-svgrepo-com.svg");
         background-repeat: no-repeat;
         background-size: 18px auto;
         box-sizing: border-box;
