--- a/style/style.css
+++ b/style/style.css
@@ -827,6 +827,7 @@
         background-image: url("img/share-svgrepo-com.svg");
         background-repeat: no-repeat;
         background-size: 18px auto;
+        user-select: none;
         box-sizing: border-box;
     }
 
@@ -839,7 +840,7 @@
         margin-left: -5px;
         position: absolute;
         display: none;
-        border-radius: 2px;
+        border-radius: 4px;
         background-color: #eeeeee;
     }
 
@@ -1661,6 +1662,18 @@
         font-size: 12px !important;
     }
 
+    .post-author span, .post-author span a {
+        font-size: 12px !important;
+    } 
+
+    .post-date {
+        margin-left: 5px !important
+    }
+
+    .post-date, .post-date span {
+        font-size: 12px !important;
+    }
+
     /* social share  */
 
     .comment-count, .twitter-share, .facebook-share {
@@ -1670,6 +1683,26 @@
     .dropdown-twitter-share, .dropdown-facebook-share {
         display: inline-block !important;
     }
+
+    .more-shares .dropdown-share {
+        align-items: center;
+        width: 40px;
+        height: auto;
+        margin-left: -10px;
+    }
+
+    .dropdown-twitter-share, .dropdown-facebook-share, .dropdown-pinterest-share, .dropdown-linkedin-share, .dropdown-whatsapp-share {
+        display: inline-block;
+        padding: 6px 10px 2px 10px;
+        box-sizing: border-box;
+    }
+
+    .dropdown-twitter-share img, .dropdown-facebook-share img, .dropdown-pinterest-share img, .dropdown-linkedin-share img, .dropdown-whatsapp-share img {
+        width: 20px;
+        height: auto;
+    }
+
+    
 
 
 
@@ -1812,6 +1845,14 @@
         padding-right: 14px !important;
     }
 
+
+    /* social share  */
+
+    .copy-link {
+        display: none !important;
+    }
+
+    /* social share  */
 
     /* comment  */
 
