--- a/style/style.css
+++ b/style/style.css
@@ -819,10 +819,10 @@
     }
 
     .more-shares {
-        z-index: 7;
+        z-index: 6;
         float: left;
         width: 18px;
-        min-height: 150px;
+        min-height: 50px;
         height: auto;
         margin: 0 7px 0 7px;
         background-image: url("img/share-svgrepo-com.svg");
@@ -834,7 +834,7 @@
 
     .more-shares .dropdown-share {
         align-items: center;
-        z-index: 6;
+        z-index: 7;
         width: 30px;
         height: auto;
         margin-top: 27px;
@@ -1690,13 +1690,14 @@
     .more-shares .dropdown-share {
         align-items: center;
         width: 40px;
+        margin-top: 38px;
         height: auto;
         margin-left: -10px;
     }
 
     .dropdown-twitter-share, .dropdown-facebook-share, .dropdown-pinterest-share, .dropdown-linkedin-share, .dropdown-whatsapp-share {
         display: inline-block;
-        padding: 6px 10px 2px 10px;
+        padding: 8px 10px 4px 10px;
         box-sizing: border-box;
     }
 
