--- a/style/style.css
+++ b/style/style.css
@@ -178,7 +178,7 @@
         background-color: #0440c4;
         box-sizing: border-box;
         user-select: none;
-        background-image: url("/Code/style/img/menu-icon.svg");
+        background-image: url("img/menu-icon.svg");
         background-size: 25px auto;
         background-repeat: no-repeat;
         background-position: center;
@@ -459,6 +459,7 @@
     .recent-posts .main-advertisement {
         width: 100%;
         height: 200px;
+        /* display: none; */
         background-color:#E5E4E4;
         margin-bottom: 30px;
         box-sizing: border-box;
@@ -788,7 +789,7 @@
 
     .social-share {
         width: auto;
-        height: 20px;
+        height: auto;
         display: flex;
         flex-wrap: wrap;
         box-sizing: border-box;
@@ -808,27 +809,32 @@
         width: auto;
         height: auto;
         user-select: none;
-        margin: 0 7px 0 7px;
+        margin: 0 8px 0 8px;
     }
 
     .twitter-share img, .facebook-share img, .copy-link img {
-        width: 18px;
+        width: 17px;
         height: auto;
         box-sizing: border-box;
         color: #0F6ABE;
     }
 
+
     .more-shares {
         z-index: 6;
         float: left;
-        width: 18px;
+        width: 17px;
         min-height: 50px;
         height: auto;
-        margin: 0 7px 0 7px;
+        margin: -1px 8px 0 8px;
         background-image: url("img/share-svgrepo-com.svg");
         background-repeat: no-repeat;
         background-size: 18px auto;
+        -webkit-user-drag: none;
         user-select: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
         box-sizing: border-box;
     }
 
@@ -931,7 +937,7 @@
     }
 
     .main-post p.read-more {
-        border-left: 5px solid #0F6ABE;
+        border-left: 6px solid #0F6ABE;
         padding-left: 10px;
     }
 
@@ -1452,7 +1458,7 @@
 
     .header-in .main-menu {
         width: 53px !important;
-        background-image: url("/Code/style/img/menu-icon.svg");
+        background-image: url("img/menu-icon.svg");
         background-size: 25px auto;
         padding: unset !important;
         margin-left: -15px;
@@ -1463,7 +1469,7 @@
     }
 
     .header-in .main-menu:hover {
-        background-image: url("/Code/style/img/menu-icon.svg");
+        background-image: url("img/menu-icon.svg");
     }
 
     /* header  */
