--- a/style/style.css
+++ b/style/style.css
@@ -944,7 +944,6 @@
     .main-post p.pustaka_ref {
         font-size: 14px;
         font-style: italic;
-        padding-left: 10px;
     }
 
     .main-post h2, .main-post h3, .main-post h4, .main-post h5 {
@@ -1705,13 +1704,17 @@
 
     .dropdown-twitter-share, .dropdown-facebook-share, .dropdown-pinterest-share, .dropdown-linkedin-share, .dropdown-whatsapp-share {
         display: inline-block;
-        padding: 8px 10px 4px 10px;
+        padding: 14px 10px 10px 10px;
         box-sizing: border-box;
     }
 
     .dropdown-twitter-share img, .dropdown-facebook-share img, .dropdown-pinterest-share img, .dropdown-linkedin-share img, .dropdown-whatsapp-share img {
         width: 20px;
         height: auto;
+    }
+
+    .dropdown-facebook-share img {
+        height: 20px !important;
     }
 
     
