--- a/style/style.css
+++ b/style/style.css
@@ -1257,7 +1257,116 @@
 
     /* comments  */
 
+    /* recent post  */
 
+    .recent-post-related {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        margin: 20px 0 20px 0;
+        box-sizing: border-box;
+    }
+
+    .recent-post-related ol li {
+        list-style: none;
+    }
+
+    .related-post {
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        list-style: none;
+    }
+
+    .main-related {
+        display: inline-block;
+        margin: 5px 0 5px 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .related-post-main {
+        width: 100%;
+        height: auto;
+    }
+
+    .related-post-thumbnail {
+        display: block;
+        float: left;
+        width: 28%;
+        height: 80px;
+        overflow: hidden;
+        background-color: #E5E4E4;
+        border-radius: 3px;
+        box-sizing: border-box;
+    }
+
+    .related-post-thumbnail > picture {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+        background-position: center center;
+        position: relative;
+    }
+
+    .related-post-thumbnail > picture img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+        background-position: center center;
+        position: relative;
+    }
+
+
+    .related-post-inside {
+        float: left;
+        width: 72%;
+        height: auto;
+        padding-left: 15px;
+        box-sizing: border-box;
+    }
+
+    .related-post-title h3 {
+        font-size: 13px;
+        padding-top: 4px;
+        font-weight: bold;
+        color: #121212;
+    }
+
+    .related-post-title h3 a {
+        color: #121212;
+    }
+
+    .related-post-author {
+        margin: unset;
+        font-size: 10px;
+        display: inline-block;
+    }
+
+
+
+    .related-post-author .author-post, .related-post-author .gap-icon, .related-post-author .time-post {
+        display: inline-block;
+    }
+
+    .related-post-author .gap-icon {
+        width: 2px;
+        height: 2px;
+        border-radius: 50%;
+        background-color: #666666;
+        margin: 0 3px 2px 3px;
+        box-sizing: border-box;
+    }
+
+    .related-post-author .author-post a, .related-post-author .time-post {
+        font-size: 9px;
+        text-decoration: none;
+        color: #666666;
+    }
+
+    /* recent post  */
 
 
 
@@ -1523,6 +1632,44 @@
     /* post  */
 
     /* main style  */
+
+
+    /* related post  */
+
+    .related-post-thumbnail {
+        width: 32% !important;
+        min-height: 135px;
+        max-height: 160px;
+    }
+
+    .related-post-inside {
+        width: 68% !important;
+    }
+
+    .related-post-title h3 {
+        font-size: 20px !important;
+        line-height: 1.3;
+        padding-top: 10px;
+        padding-right: 30px;
+        box-sizing: border-box;
+    }
+
+    span.related-post-author {
+        display: inline-block;
+        margin-top: 10px;
+    }
+
+    .related-post-author .author-post a, .related-post-author .time-post {
+        font-size: 10px !important;
+    }
+
+    .related-post-author .gap-icon {
+        width: 2px;
+        height: 2px;
+        margin: 0 5px 2px 5px;
+    }
+
+    /* related post  */
 
 
     /* footer style  */
@@ -1800,6 +1947,27 @@
 
     /* post  */
 
+    /* related post  */
+
+    .related-post-thumbnail {
+        width: 30% !important;
+    }
+
+    .related-post-inside {
+        width: 70% !important;
+        padding-left: 20px !important;
+    }
+
+    .related-post-title h3 {
+        font-size: 18px !important;
+        padding-right: 10px !important;
+    }
+
+    .related-post-author a, .related-post-author .time-post {
+        font-size: 9px !important;
+    }
+
+    /* related post  */
 
     /* main style  */
 
