--- a/style/style.css
+++ b/style/style.css
@@ -487,7 +487,7 @@
         width: 100%;
         min-height: 100%;
         height: 100%;
-        margin-top: 30px;
+        margin-top: 10px;
         /* background-color: green; */
     }
 
@@ -746,6 +746,7 @@
     
 
     .header-post-bottom {
+        display: inline-block;
         width: 100%;
         height: auto;
         margin: 15px 0 0 0;
@@ -1370,7 +1371,38 @@
     /* recent post  */
 
 
+    /* recent post news  */
 
+    .recent-post-news {
+        display: inline-block;
+        width: 100%;
+        height: auto;
+    }
+
+    .recent-post-single {
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        list-style: none;
+    }
+
+    .recent-post-list {
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        margin: 15px 0 15px 0;
+        list-style: none;
+    }
+
+
+    .header-post-title h1 a {
+        color: #131313;
+    }
+
+    .short-desc {
+        padding-right: 30px;
+    }
+    /* recent post news  */
 
 /* post  */
 
@@ -1453,6 +1485,31 @@
         border-radius: 3px;
         box-sizing: border-box;
     }
+
+    .thumbnail-sosmed a {
+        width: auto;
+        height: auto;
+    }
+
+    .thumbnail-sosmed a img {
+        padding: 9px 7px 5px 8px;
+        width: 18px;
+        height: 18px;
+    }
+
+    .footer-social-media .facebook:hover {
+        background-color: #4879ff !important;
+    }
+
+    .footer-social-media .twitter:hover {
+        background-color: #4099ff !important;
+    }
+
+    .footer-social-media .pinterest:hover {
+        background-color: #df3737 !important;
+    }
+
+
 
     .footer-bottom .footer-logo {
         width: 100px;
